# Network-Generator

./: README.md  ToDo
cco-project-3d-purkinje/: .gitignore  CMakeLists.txt  ToDo  run_elizabeth.sh  run_valgrind.sh
cco-project-3d-purkinje/clouds/endocardium/: elizabeth_endo_LV_m.vtk  elizabeth_endo_LV_um.vtk  elizabeth_endo_RV_um.vtk  elizabeth_endo_remapped_LV_m.pts  elizabeth_endo_remapped_LV_m.vtk  elizabeth_endo_remapped_LV_um.vtk
cco-project-3d-purkinje/clouds/full/: jesuliana_mesh_tagged_LV_m.vtk  jesuliana_mesh_tagged_RV_back_bottom_m.vtk  jesuliana_mesh_tagged_RV_back_top_m.vtk  jesuliana_mesh_tagged_RV_front_bottom_m.vtk  jesuliana_mesh_tagged_RV_front_top_m.vtk
cco-project-3d-purkinje/clouds/inactives/: jesuliana_mesh_cloud_LV_m.vtk  jesuliana_mesh_cloud_RV_back_top_m.vtk  jesuliana_mesh_cloud_RV_front_bottom_m.vtk
cco-project-3d-purkinje/clouds/pmjs/: jesuliana_mesh_active_pmjs_LV_m.vtk  jesuliana_mesh_active_pmjs_LV_m_package_1.vtk  jesuliana_mesh_active_pmjs_LV_um.vtk  jesuliana_mesh_active_pmjs_LV_um_package_1.vtk  jesuliana_mesh_active_pmjs_RV_back_bottom_m.vtk  jesuliana_mesh_active_pmjs_RV_back_bottom_um.vtk  jesuliana_mesh_active_pmjs_RV_front_bottom_um.vtk  jesuliana_mesh_active_pmjs_RV_front_top_m.vtk  jesuliana_mesh_active_pmjs_RV_front_top_um.vtk
cco-project-3d-purkinje/inputs/: test_LV.ini  test_RV_back_bottom.ini  test_RV_back_top.ini  test_RV_front_bottom.ini  test_RV_front_top.ini  test_sebastian_LV.ini  test_sebastian_RV.ini
cco-project-3d-purkinje/inputs/01_PMJ_Final/: elizabeth_biventricular_coupled_co:length_seed:1562002891_LV.ini  elizabeth_biventricular_coupled_co:length_seed:1562002891_RV_back_bottom.ini  elizabeth_biventricular_coupled_co:length_seed:1562002891_RV_back_top.ini  elizabeth_biventricular_coupled_co:length_seed:1562002891_RV_front_bottom.ini  elizabeth_biventricular_coupled_co:length_seed:1562002891_RV_front_top.ini  elizabeth_biventricular_coupled_co:length_seed:1562002894_LV.ini  elizabeth_biventricular_coupled_co:length_seed:1562002894_RV_back_bottom.ini  elizabeth_biventricular_coupled_co:length_seed:1562002894_RV_back_top.ini  elizabeth_biventricular_coupled_co:length_seed:1562002894_RV_front_bottom.ini  elizabeth_biventricular_coupled_co:length_seed:1562002894_RV_front_top.ini  elizabeth_biventricular_coupled_co:length_seed:1562005513_LV.ini  elizabeth_biventricular_coupled_co:length_seed:1562005513_RV_back_bottom.ini  elizabeth_biventricular_coupled_co:length_seed:1562005513_RV_back_top.ini  elizabeth_biventricular_coupled_co:length_seed:1562005513_RV_front_bottom.ini  elizabeth_biventricular_coupled_co:length_seed:1562005513_RV_front_top.ini  elizabeth_biventricular_coupled_co:length_seed:1562005554_LV.ini  elizabeth_biventricular_coupled_co:length_seed:1562005554_RV_back_bottom.ini  elizabeth_biventricular_coupled_co:length_seed:1562005554_RV_back_top.ini  elizabeth_biventricular_coupled_co:length_seed:1562005554_RV_front_bottom.ini  elizabeth_biventricular_coupled_co:length_seed:1562005554_RV_front_top.ini  elizabeth_biventricular_coupled_co:length_seed:1562005555_LV.ini  elizabeth_biventricular_coupled_co:length_seed:1562005555_RV_back_bottom.ini  elizabeth_biventricular_coupled_co:length_seed:1562005555_RV_back_top.ini  elizabeth_biventricular_coupled_co:length_seed:1562006177_LV.ini  (+7 more)
cco-project-3d-purkinje/results/: link_rate_table.ods
cco-project-3d-purkinje/scripts/: convert_space_to_tab.py  geometrical.py
cco-project-3d-purkinje/src/: main.cpp
cco-project/refactor/: CMakeLists.txt  ToDo  cco_tree.vtk  cco_tree_NOT_OK.vtk  perfusion_area.vtp  run_valgrind.sh
diffusion-limited-aggregation/: .gitignore  CMakeLists.txt  ToDo  clear_vtk.sh  execution_pipeline.txt  generate_grid.stl  run_sensibility_analysis.sh  run_valgrind.sh
diffusion-limited-aggregation/inputs/: box_walker.ini  circle_walker.ini  custom_walker.ini  custom_walker_with_initial_network.ini  elizabeth_walker.ini  sphere_walker.ini  square_walker.ini  square_walker_initial_network.ini
diffusion-limited-aggregation/maps/: generated_grid_mapping.txt
diffusion-limited-aggregation/saved-networks/: box_tree_nterm542.vtk  circle_tree_nterm239.vtk  sphere_tree_nterm556.vtk  square_tree_nterm490.vtk
diffusion-limited-aggregation/scripts/: clear_png.sh  convert_png_to_mp4.sh  mean_std.py  run.sh
diffusion-limited-aggregation/src/: main.cpp
fractal-network/: CMakeLists.txt
fractal-network/inputs/: simple_fractal.ini
fractal-network/outputs/: fractal_tree.vtk
fractal-network/src/: main.cpp
geodesic_path/: .gitignore  CMakeLists.txt
geodesic_path/src/: main.cpp
mesh-transform/: .gitignore  CMakeLists.txt
mesh-transform/inputs/: box.vtp  box_translated.vtp  slab.vtu  sphere.vtk
mesh-transform/src/: main.cpp
network-reader/: .gitignore  CMakeLists.txt  ToDo
network-reader/inputs/: elizabeth_minimize_volume_original_nterm800.vtk  purkinje_tree_cv:0,4-tiss_cv:1,9-pk_LV_UNIQUE.vtk
network-reader/outputs/: graph-1.vtk  pmj_config.txt  pmj_graph.vtk
network-reader/scripts/: mean_std.py
network-reader/src/: main.cpp
old-codes/cco-project/: CMakeLists.txt  run_valgrind.sh
old-codes/generate_cloud_points/: CMakeLists.txt
old-codes/linked-list/: CMakeLists.txt
old-codes/perfusion-area/: CMakeLists.txt
old-codes/point-remapper-v1/: CMakeLists.txt
old-codes/point-remapper-v2/: CMakeLists.txt
point-remapper-v3/: CMakeLists.txt
point-remapper-v3/src/: main.cpp
space-colonization/: .gitignore  CMakeLists.txt
space-colonization/inputs/: leaves_positions.txt
space-colonization/outputs/: space_colonization_tree_offset_1.vtk  space_colonization_tree_offset_2.vtk  space_colonization_tree_offset_3.vtk  space_colonization_tree_offset_4.vtk  space_colonization_tree_offset_5.vtk  space_colonization_tree_offset_6.vtk
space-colonization/reference/: Branch.js  Leaf.js  Main.js  Tree.js
space-colonization/src/: main.cpp
stl-reader-2/: .gitignore  CMakeLists.txt
stl-reader-2/inputs/: geodesic_path.vtk
stl-reader-2/src/: main.cpp
surface-extractor/: .gitignore  CMakeLists.txt
surface-extractor/src/: main.cpp
(+1836 files in other folders)
