cmake_minimum_required(VERSION 3.0.1)
project(DLA)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/shared-libs)

FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

ADD_SUBDIRECTORY(src/tree)

ADD_EXECUTABLE(DLA src/main.cpp)

ADD_DEPENDENCIES(DLA tree)

TARGET_LINK_LIBRARIES(DLA ${VTK_LIBRARIES} tree dl m)

