cmake_minimum_required(VERSION 3.0.1)
project(NetworkReader)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/shared-libs)

FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

ADD_SUBDIRECTORY(src/graph)
ADD_SUBDIRECTORY(src/pmj)
ADD_SUBDIRECTORY(src/utils)

ADD_EXECUTABLE(NetworkReader src/main.cpp)

ADD_DEPENDENCIES(NetworkReader graph pmj utils)

TARGET_LINK_LIBRARIES(NetworkReader ${VTK_LIBRARIES} graph pmj utils dl m)
