cmake_minimum_required(VERSION 3.0.1)
project(Surface-Extractor)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/shared-libs)

FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

ADD_SUBDIRECTORY(src/stl-reader)

ADD_EXECUTABLE(Surface-Extractor src/main.cpp)

ADD_DEPENDENCIES(Surface-Extractor reader)

TARGET_LINK_LIBRARIES(Surface-Extractor ${VTK_LIBRARIES} reader dl m)

