cmake_minimum_required(VERSION 3.0.1)
project(PointRemapper)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/shared-libs)

FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

ADD_EXECUTABLE(PointRemapper src/main.cpp)

TARGET_LINK_LIBRARIES(PointRemapper ${VTK_LIBRARIES} dl m)
